# pset

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  index.md  usage.md
pset/: cli.py  init.py
pset/commands/: __init__.py  build.py  create.py  init.py  install.py  publish.py
pset/templates/: gitignore.j2  pyproject_toml.j2  readme_md.j2  setup_py.j2
pset/utils/: file_ops.py  git.py  init.py  venv.py
tests/: test_cli.py  test_commands.py  test_utils.py
